--- a/HTML/5th HTMLProjectReview/StyleSheetPR.css
+++ b/HTML/5th HTMLProjectReview/StyleSheetPR.css
@@ -1,2 +1,48 @@
-﻿body {
+﻿
+h1 {
+    text-align: center;
+}
+
+body {
+    width: 80%;
+    height: 100vh;
+    margin: auto;
+    background: linear-gradient(90deg, rgba(3,40,80,1),rgba(2,50,89,.9),rgba(3,40,80,1));
+    color: rgba(245,245,220,1);
+    font-family: Calibri;
+    font-size: 18px;
+}
+
+fieldset {
+    padding: 0 10px;
+    border: 3px solid rgba(0,0,0,.5);
+}
+
+input,
+textarea,
+select {
+    margin: 10px 0 0 0;
+    width: 95%;
+    min-height: 2.3em;
+    background-color: rgba(3,10,20,.9);
+    border: auto solid rgba(3,10,120,.1);
+    color: rgba(245,245,220,1);
+}
+
+.inline {
+    width: unset;
+    margin: 1 5em 2 10px;
+    vertical-align: middle;
+    display: inline;
+}
+
+input[type="submit"] {
+    display: block;
+    width: 60%;
+    margin: 1em auto;
+    height: 2em;
+    font-size: 1.1rem;
+    background-color: rgba(3,10,20,.6);
+    border-color: rgba(245,245,220,1);
+    min-width: 300px;
 }
